--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ var x = setInterval(function() {
                             <ul>  
                               <strong>  <h4>Join the Event @ MECS </h4></strong>
                                   <br>
-                                      <img src="MECS_IEEE_CS-14-05-2022.jpg" alt="Event-Flyer" style="float:right;width:400px;height:600px;">                  
+                                      <img src="MECS_IEEE_CS-14-05-2022.jpeg" alt="Event-Flyer" style="float:right;width:400px;height:600px;">                  
                                
                                
                             </ul>
