--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ var x = setInterval(function() {
                         <div class="col-sm-6">
 
                             <ul>
-                                  <strong>  <h4>Schedule - 23<sup> th</sup> April 2K22</h4></strong>
+                                  <strong>  <h4>Schedule - 23<sup>rd</sup> April 2K22</h4></strong>
                                   <br>
                             
                                 <li>
