--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@ var x = setInterval(function() {
 
 <div class="col-sm">
 <div><a href="https://t.me/ieeecsmecs">
-    <img src="Telegram_logo.png" alt="IMAGE" Height ="50" width ="50"></a>
+    <img src="Telegram-logo.png" alt="IMAGE" Height ="50" width ="50"></a>
   </div>
 
 </div>
